--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <p style="line-height: 4ch">&nbsp</p>
 
-        <div align=right style="color:#000000; font-size: 15pt " >
+        <div align=center style="color:#000000; font-size: 15pt " >
             <h1>
                 ابدأ بالقراءة ثم عد هنا لتسجل تقدمك
             </h1>
