--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
        <p style="line-height: 4ch">&nbsp</p>
 
         <div style="float: left; width: 100%">
-            <button class="small red button" onclick="window.open('', '_self', ''); window.close();"> &nbsp;&nbsp; تـقدم &nbsp;&nbsp; </button>
+            <button class="small red button" onclick="window.open('', '_self', ''); window.close();"> &nbsp;&nbsp; تسجيل &nbsp;&nbsp; </button>
         </div>
 
     </body>
