--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
         
         <script src="https://code.jquery.com/jquery-3.5.0.slim.js"></script>
 
@@ -27,132 +27,6 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="./ico/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-
-        <style>
-
-            body{
-                width: 100%;
-                /* max-width: 680px; */
-                margin: 0%;
-                background-size: 100%;
-                background-image:url('./bg.jpg');
-                background-repeat: no-repeat;
-                /*  background-position:50% */
-                }
-
-            /* Button Style !!!!!!!!!!!!!!!!!!!*/
-            .button{
-            margin: 0;
-            cursor: pointer;
-            border: 1px solid #bbb;
-            overflow: visible;
-            font: bold 30px arial, helvetica, sans-serif;
-            text-decoration: none;
-            white-space: nowrap;
-            color: #555;
-            background-color: #ddd;
-            background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,1)), to(rgba(255,255,255,0)));
-            background-image: -webkit-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
-            background-image: -moz-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
-            background-image: -ms-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
-            background-image: -o-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
-            background-image: linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,0));
-            -webkit-transition: background-color .2s ease-out;
-            -moz-transition: background-color .2s ease-out;
-            -ms-transition: background-color .2s ease-out;
-            -o-transition: background-color .2s ease-out;
-            transition: background-color .2s ease-out;
-            background-clip: padding-box;
-            -moz-border-radius: 3px;
-            -webkit-border-radius: 3px;
-            border-radius: 3px;
-            -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, .3), 0 2px 2px -1px rgba(0, 0, 0, .5), 0 1px 0 rgba(255, 255, 255, .3) inset;
-            -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, .3), 0 2px 2px -1px rgba(0, 0, 0, .5), 0 1px 0 rgba(255, 255, 255, .3) inset;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, .3), 0 2px 2px -1px rgba(0, 0, 0, .5), 0 1px 0 rgba(255, 255, 255, .3) inset;
-            text-shadow: 0 1px 0 rgba(255,255,255, .9);
-            }
-            .button:active{
-            background: #e9e9e9;
-            }
-            .button.small{
-            padding: 4px 12px;
-            }
-            .button.red{
-            background-color: #3582ca;
-            border-color: #3556c4;
-            color: #fff;
-            text-shadow: 0 1px 0 rgba(0,0,0,.2);
-            background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,.3)), to(rgba(255,255,255,0)));
-            background-image: -webkit-linear-gradient(top, rgba(255,255,255,.3), rgba(255,255,255,0));
-            background-image: -moz-linear-gradient(top, rgba(255,255,255,.3), rgba(255,255,255,0));
-            background-image: -ms-linear-gradient(top, rgba(255,255,255,.3), rgba(255,255,255,0));
-            background-image: -o-linear-gradient(top, rgba(255,255,255,.3), rgba(255,255,255,0));
-            background-image: linear-gradient(top, rgba(255,255,255,.3), rgba(255,255,255,0));
-            }
-
-            .button.red:active{
-            background: #35a7c4;
-            }
-            /* End Button Style !!!!!!!!!!!!!!!!!!!*/
-
-
-
-
-            /* Select Drop Down Style!!!!!!!!!!!!!!!!!!!*/
-            /* Reset Select */
-            select {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            -ms-appearance: none;
-            appearance: none;
-            outline: 0;
-            box-shadow: none;
-            border: 0 !important;
-            background: #2c3e50;
-            background-image: none;
-            }
-            /* Remove IE arrow */
-            select::-ms-expand {
-            display: none;
-            }
-            /* Custom Select */
-            .select {
-            /* position: relative; */
-            /* display: flex; */
-            width: 10em;
-            /* height: 3em; */
-            /* line-height: 3; */
-            background: #2c3e50;
-            overflow: hidden;
-            border-radius: .5em;
-            }
-            select {
-            /* flex: 1; */
-            padding: 1.5em;
-            color: #fff;
-            cursor: pointer;
-            }
-            /* Arrow */
-            .select::after {
-            content: '\25BC';
-            position: absolute;
-            top: 0;
-            right: 0;
-            padding: 0 1em;
-            background: #34495e;
-            cursor: pointer;
-            pointer-events: none;
-            -webkit-transition: .25s all ease;
-            -o-transition: .25s all ease;
-            transition: .25s all ease;
-            }
-            /* Transition */
-            .select:hover::after {
-            color: #f39c12;
-            }
-            /* End Drop Down Style!!!!!!!!!!!!!!!!!!!*/
-
-        </style>
         
     </head>
     <body>
