--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link rel="stylesheet" href="css/loginstyle.css" />
+    <link rel="stylesheet" href="css/bg.css" />
+    
     <script src="https://code.jquery.com/jquery-3.5.0.slim.js"></script>
 
     <title> وفي ذلك فليتنافس المتنافسون </title>
