--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+        <link rel="stylesheet" href="css/bg.css" />
         
         <script src="https://code.jquery.com/jquery-3.5.0.slim.js"></script>
 
