--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   
   <body>
-    <form class="box" action="mainpage.html" method="post">
+    <form class="box" action="mainpage.html" method="get">
       <input type="submit" name="" value="LOGIN WITH FACEBOOK" />
       <h1>--------- OR ---------</h1>
       <input type="text" name="" placeholder="Username" />
