--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-        <link rel="stylesheet" href="css/bg.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/bg.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/loginstyle.css" />
         
         <script src="https://code.jquery.com/jquery-3.5.0.slim.js"></script>
 
