--- a/mainpage.html
+++ b/mainpage.html
@@ -49,9 +49,7 @@
         <!-- sura and aya selectors start-->
 
         <div align=right style="float: right; width: 50%">
-            <select class="select" name="Sura" id="sura_selector" onChange="myFunc(this);">
-                <option value="" disabled selected hidden>إختر السورة</option>
-            </select>
+            <select class="select" name="Sura" id="sura_selector" onChange="myFunc(this);"></select>
         </div>
 
         <div align=right style="float: right; width: 50%">
@@ -64,7 +62,7 @@
             // fil sura selector
             
             var suras = [ "الفاتحة", "البقرة", "آل عمران", "النساء", "المائدة", "الأنعام", "الأعراف", "الأنفال", "التوبة", "يونس", "هود", "يوسف", "الرعد", "ابراهيم", "الحجر", "النحل", "الإسراء", "الكهف", "مريم", "طه", "الأنبياء", "الحج", "المؤمنون", "النور", "الفرقان", "الشعراء", "النمل", "القصص", "العنكبوت", "الروم", "لقمان", "السجدة", "الأحزاب", "سبإ", "فاطر", "يس", "الصافات", "ص", "الزمر", "غافر", "فصلت", "الشورى", "الزخرف", "الدخان", "الجاثية", "الأحقاف", "محمد", "الفتح", "الحجرات", "ق", "الذاريات", "الطور", "النجم", "القمر", "الرحمن", "الواقعة", "الحديد", "المجادلة", "الحشر", "الممتحنة", "الصف", "الجمعة", "المنافقون", "التغابن", "الطلاق", "التحريم", "الملك", "القلم", "الحاقة", "المعارج", "نوح", "الجن", "المزمل", "المدثر", "القيامة", "الانسان", "المرسلات", "النبإ", "النازعات", "عبس", "التكوير", "الإنفطار", "المطففين", "الإنشقاق", "البروج", "الطارق", "الأعلى", "الغاشية", "الفجر", "البلد", "الشمس", "الليل", "الضحى", "الشرح", "التين", "العلق", "القدر", "البينة", "الزلزلة", "العاديات", "القارعة", "التكاثر", "العصر", "الهمزة", "الفيل", "قريش", "الماعون", "الكوثر", "الكافرون", "النصر", "المسد", "الإخلاص", "الفلق", "الناس" ]
-            var select1 = '';
+            var select1 = '<option value="" disabled selected hidden>إختر السورة</option>';
             for (i=0;i<suras.length;i++){
                     select1 += '<option value="' + suras[i] + '">' + suras[i] + '</option>';
                 };
