--- a/mainpage.html
+++ b/mainpage.html
@@ -38,7 +38,7 @@
 
     <div class="box">
 
-        <p style="line-height: 4ch">&nbsp</p>
+        <p style="line-height: 4ch">*•.¸¸¸.•*¨¨*•.¸¸¸.•*•.¸¸¸.•*¨¨*•.¸¸¸.•*</p>
 
         <div align=center style="color:#000000; font-size: 15pt ">
             <h1>
